pattern-functions-servicebus/v2/template/net.nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
		"applicationId": {
			"type": "string",
			"defaultValue": "",
			"metadata": {
				"comments": "Application ID in ServiceNow",
				"required": false
			}
		},
		"productId": {
			"type": "string",
			"defaultValue": "",
			"metadata": {
				"comments": "Application PR in ServiceNow",
				"required": false
			}
		},
		"productLine": {
			"type": "string",
			"defaultValue": "",
			"metadata": {
				"comments": "Application PL in ServiceNow",
				"required": false
			}
		},
		"employeeId": {
			"type": "string",
			"defaultValue": "",
			"metadata": {
				"comments": "Employee ID",
				"required": false
			}
		},
		"businessUnit": {
			"type": "string",
			"defaultValue": "wi",
			"metadata": {
				"comments": "Business Unit. Examples: 'wi', 'ecc', 'gs'",
				"required": false
			}
		},
		"environment": {
			"type": "string",
			"defaultValue": "dev",
			"metadata": {
				"comments": "Deployment Environment",
				"required": false
			}
		},
		"organization": {
			"type": "string",
			"defaultValue": "WIM",
			"metadata": {
				"comments": "Organization",
				"required": false
			}
		},
		"timestamp": {
			"type": "string",
			"defaultValue": "[utcNow('u')]"
		},

        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Azure region"
            }
        },
        "nsgName": {
            "type": "string",
            "defaultValue": ""
        },
		"nsgRuleInbound100Src": {
            "type": "string",
            "defaultValue": ""
        }
	},
    "variables": {
		"resourceTags": {
			"ApplicationId": "[toLower(parameters('applicationId'))]",
			"ProductId": "[toLower(parameters('productId'))]",
			"ProductLine": "[toLower(parameters('productLine'))]",
			"CreatedBy": "[toLower(parameters('employeeId'))]",
			"BusinessUnit": "[parameters('businessUnit')]",
			"Environment": "[toLower(parameters('environment'))]",
			"Organization": "[parameters('organization')]",
			"Timestamp": "[parameters('timestamp')]"
		},
        "apiVersionNet": "2020-07-01"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('apiVersionNet')]",
            "name": "[parameters('nsgName')]",
            "location": "[parameters('location')]",
			"tags": "[variables('resourceTags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "DevTestInbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('nsgRuleInbound100Src')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowStorage",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 499,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowMonitor",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureMonitor",
                            "access": "Allow",
                            "priority": 498,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAppService",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AppService",
                            "access": "Allow",
                            "priority": 497,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowCosmosDB",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureCosmosDB",
                            "access": "Allow",
                            "priority": 496,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowServiceBus",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "ServiceBus",
                            "access": "Allow",
                            "priority": 495,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "443",
                                "5671-5672"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowEventHub",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "EventHub",
                            "access": "Allow",
                            "priority": 494,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
				]
            }
        }
	]
}
